# gpw-scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.dev.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_18_2034-4de9c1afb476_add_espi_ebi_model.py  2024_10_10_1953-14ce2b33f7e3_add_created_at.py  2024_10_11_2050-50d049a95ae1_add_webhooks_models.py  2024_12_17_1130-2aafce1f7ce5_add_stocks_ohlc.py  2024_12_18_1040-18da65403b2d_add_currency_exchange.py  2024_12_18_1917-360bc4174834_add_tickers_metadata.py  2025_09_06_1301-b169dc90e86a_add_fts.py
gpw_scraper/: api.py  beautifulsoup.py  config.py  dependencies.py  llm.py  utils.py  worker.py
gpw_scraper/databases/: db.py  dependencies.py
gpw_scraper/models/: base.py  currency_exchange.py  espi_ebi.py  mixins.py  stocks_ohlc.py  tickers_metadata.py  webhook.py
gpw_scraper/routers/: espi_ebi.py  webhook.py
gpw_scraper/schemas/: base.py  espi.py  espi_ebi.py  pagination.py  webhook.py
gpw_scraper/scrapers/: pap.py
gpw_scraper/scrapers/currency_exchange/: exchangerate_api.py
gpw_scraper/scrapers/stocks/: yf.py
gpw_scraper/scrapers/tickers_metadata/: yf.py
gpw_scraper/services/: espi_ebi.py  sqlalchemy.py  webhook.py
tests/: _scrape_pap_html.py  conftest.py  test_beautifulsoup.py  test_currency_exchange_exchangerate_api.py  test_llm.py  test_router_webhook.py  test_scraper_pap.py  test_scraper_stocks_yf.py  test_scraper_tickers_metadata_yf.py  test_worker.py
tests/html/: 560558.html  560559.html  560560.html  560561.html  560562.html  560563.html  560564.html  560565.html  560566.html  560567.html  560568.html  560569.html  560570.html  560571.html  560572.html  560573.html  560574.html  560575.html  560576.html  560577.html  560578.html  560579.html  560580.html  560581.html  560582.html  560583.html  560584.html  560585.html  560586.html  560587.html  560588.html  560589.html  560590.html  560591.html  560592.html  560593.html  560594.html  560595.html  560596.html  560597.html  (+29 more)
tests/yf_html/: LUNR_history.html  RKLB_history.html  SNT.WA_profile.html  XTB.WA_history.html
